# learning-path-analyzer

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yml  weekly-report.yml
data/: sample.csv
scripts/: generate_report.py
src/: main.py  utils.py
tests/: test_main.py
