[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "learning-path-analyzer"
version = "0.1.0"
description = "Learning Path Analyzer for LMS logs"
dependencies = [
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "scikit-learn>=1.0.0",
    "matplotlib>=3.4.0",
    "plotly>=5.0.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]